--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -57,6 +57,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/access-token.js"></script>
+        <script src="scripts/directives/login-link.js"></script>
         <!-- endbuild -->
 </body>
 </html>
