--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -58,6 +58,8 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/access-token.js"></script>
         <script src="scripts/directives/login-link.js"></script>
+        <script src="scripts/controllers/auth-ctrl.js"></script>
+        <script src="scripts/services/user.js"></script>
         <!-- endbuild -->
 </body>
 </html>
